# personal-playwright-crawler

./: .gitignore  LICENSE  main.py  pyproject.toml
hackernews/: crawler.py
hackernews/tests/: test_crawler.py  test_hackernews_crawler.py
